# vector-search

./: .gitignore  README.md  pyproject.toml  textual-blocking.txt
src/research_console/: chroma_db.py  cli.py  file_reader.py
src/research_console/utils/: utils.py
src/vector_search/: main.py  vectorsearchapp.tcss
tests/: test_e2e.py
